refactor saving meals api code

--- a/Food Tracker/Base.lproj/Main.storyboard
+++ b/Food Tracker/Base.lproj/Main.storyboard
@@ -202,6 +202,6 @@
         <image name="defaultPhoto" width="540" height="540"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="G8z-oK-FWN"/>
+        <segue reference="ZKp-yU-3Gp"/>
     </inferredMetricsTieBreakers>
 </document>
